<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textTitleLogin"
                android:layout_width="match_parent"
                android:text="@string/text_welcome"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editUserLayout"
                style="@style/TextInputLayoutEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_user"
                android:layout_marginTop="@dimen/size_20"
                android:textColorHint="@color/gray_150"
                app:hintTextColor="@color/gray_150"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_56"
                    android:imeOptions="actionNext"
                    android:paddingStart="@dimen/size_8"
                    android:paddingEnd="@dimen/size_8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPassLayout"
                style="@style/TextInputLayoutEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20"
                android:hint="@string/text_hint_pass"
                android:textColorHint="@color/gray_150"
                app:hintTextColor="@color/gray_150"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUserLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_56"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:paddingStart="@dimen/size_8"
                    android:paddingEnd="@dimen/size_8" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_56"
                android:id="@+id/btnLogin"
                android:background="@drawable/bg_blue"
                android:layout_marginTop="@dimen/size_20"
                android:text="@string/text_btn_login"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPassLayout" />
            <TextView
                android:id="@+id/btnCreateRegister"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Crear Cuenta"
                android:layout_marginTop="@dimen/size_20"
                android:textStyle="bold"
                android:padding="@dimen/size_20"
                android:textSize="@dimen/text_size_20"
                android:textColor="@color/blue"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>